test/good/functions/func1.px

func min(Int x, Int y) Int def
    if x < y do
        return x
    else do
        return y

x = 5
print min(42, x) + min(x, x) + min(-1, x)
