test/bad/functions/call2.px

func f(Int x) def
    return

f(f(5))
